# demo_vue_go_rust

./: .gitignore  Makefile  READE.md  README.md  docker-compose.yml  make.ps1
backend/: go.mod  go.sum  main.go
backend/handlers/: health_handler.go  user_handler.go
backend/middleware/: cors.go
backend/models/: user.go
backend/routes/: routes.go
backend/templates/: index.html
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.tools  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: UserForm.vue  UserList.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue  UserManagement.vue
scripts/: build.sh  deploy.sh
tools/: Cargo.toml  test_users.json
tools/src/: main.rs
