[package]
name = "demo-tools"
version = "0.1.0"
edition = "2021"
authors = ["Demo Team"]
description = "Rust工具程序，用于数据处理和系统监控"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
